Update Event View with dialog and fix overflow on body tag

--- a/src/components/ui/EventRating/EventRating.module.scss
+++ b/src/components/ui/EventRating/EventRating.module.scss
@@ -19,6 +19,7 @@
     background-color: #fff;
     width: 90%;
     max-width: 615px;
+    height: fit-content;
     max-height: 90%;
     overflow-y: auto;
 
